--- a/slider.html
+++ b/slider.html
@@ -24,8 +24,8 @@
         <img id="slider-image10" class="slider-image" src="images/post-tattoo-10.jpg" alt="image description" >
       </div>
     </div>
-    <button id="prev"><span class="material-symbols-rounded">arrow_back_ios</span></button>
-    <button id="next"><span class="material-symbols-rounded">arrow_forward_ios</span></button>
+    <span id="prev"class="material-symbols-rounded button">arrow_back_ios</span>
+    <span id="next"class="material-symbols-rounded button">arrow_forward_ios</span>
   </div>
   <script src="main.js"></script>
 </body>
